fix z-index for tbody th

--- a/src/styles/blocks/_table.scss
+++ b/src/styles/blocks/_table.scss
@@ -85,7 +85,7 @@ tbody th {
   @include media-breakpoint-up(lg) {
     position: sticky;
     left: -$border-width;
-    z-index: 10;
+    z-index: 1;
 
     background-color: inherit;
 
